--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,10 @@
 		
 	<!-- CSS File -->
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		
+	<!-- Font Awesome -->
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+			
     
 </head>
 
@@ -29,40 +33,40 @@
 		
 	<!-- Section for the image -->
 	<div class="container-fluid image">
-		<div class="row col-md-12 col-md-offset-2">
+		<div class="row col-md-12">
 			<img class="img-responsive" src="http://3.bp.blogspot.com/-SSq2yQn5xLE/TYqRsNwudMI/AAAAAAAAFtc/cYa895Ud6r4/s1600/miguel%2Bnicolelis.jpg" class="img-responsive">
 		</div>
 	</div>
 	<hr>
 	<div class="container-fluid quote">
 		<h2 id="qt">"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
+		<p id="sign">-<strong>M</strong>iguel <strong>N</strong>icolelis</p>
 	</div>
 	
 	<!-- Section for the information text and external links -->
 	<div class="container-fluid text">
-		<div class="row">
-			<div class="col-sm-6 infos">
-				<div class="col-sm-3">
-					<img class="logo" src="http://www.uab.edu/medicine/cnc/images/M_images/Miguel_0115.png">
+		<div class="row col-md-12">
+			<div class="col-md-4 col-md-offset-1">
+				<div class="foto">
+					<img class="logo" src="http://www.falling-walls.com/website/var/tmp/thumb_359__lecture_portrait-49c4461fa3d90cd84852f224a26f15f8.jpeg">
 				</div>
 			</div>
-			<div class="col-sm-6 infos">
-				<div class="col-sm-3">
-						<p>Born march 7, 1961</p>
-						<p>Brazilian scientist and physician</p>
-						<p>Best known for his pioneering work in "reading monkey thought"</p>
-						<p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal</p>
-				</div>
-				<div class="col-sm-3">
-					<ul>
-						<li>Link 1</li>
-						<li>Link 2</li>
-						<li>Link 3</li>
-						<li>Link 4</li>
-					</ul>
-				</div>
+			<div class="col-md-6 text">
+						<p>Born march 7, 1961. Brazilian scientist and physician that is best known for his pioneering work in "reading monkey thought".</p>
+						<p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal.</p>
 			</div>
 		</div>
 	</div>
+	<hr>
+	<div class="container-fluid link">
+		<div class="links">
+			<a href="http://www.nicolelislab.net/"><i class="fa fa-flask" aria-hidden="true"></i></a>
+			<a href="https://en.wikipedia.org/wiki/Miguel_Nicolelis"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="https://twitter.com/miguelnicolelis"><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+			<a href="https://www.linkedin.com/in/miguel-nicolelis-4b99763b"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+		</div>
+		
+	</div>
+	<hr>
 	
 </body>
