--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 	<hr>
 	<div class="container-fluid quote">
 		<h2 id="qt">"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
-		<p id="sign">-<strong>M</strong>iguel <strong>N</strong>icolelis</p>
+		<p id="sign">- Miguel Nicolelis</p>
 	</div>
 	
 	<!-- Section for the information text and external links -->
@@ -52,8 +52,8 @@
 				</div>
 			</div>
 			<div class="col-md-6 text">
-						<p>Born march 7, 1961. Brazilian scientist and physician that is best known for his pioneering work in "reading monkey thought".</p>
-						<p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal.</p>
+				<p>Born march 7, 1961. Brazilian scientist and physician that is best known for his pioneering work in "reading monkey thought".</p>
+				<p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal.</p>
 			</div>
 		</div>
 	</div>
