--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 	</div>
 	<hr>
 	<div class="container-fluid quote">
-		<h2 id="qt">"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
+		<h2>"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
 		<p id="sign">- Miguel Nicolelis</p>
 	</div>
 	
