--- a/html/index.html
+++ b/html/index.html
@@ -26,47 +26,56 @@
 
 <body>
 	
-	<!-- Section for name and subtitle -->
-	<div class="container-fluid">
-		<h1 id="title">Miguel Nicolelis</h1>
+	<body>
+	<div id="main">
+    <!-- Section for name and subtitle -->
+    <div class="container-fluid">
+      <h1 id="title">Miguel Nicolelis</h1>
+    </div>
+
+    <!-- Section for the image -->
+    <div id="img-div">
+      <img id="image" src="http://3.bp.blogspot.com/-SSq2yQn5xLE/TYqRsNwudMI/AAAAAAAAFtc/cYa895Ud6r4/s1600/miguel%2Bnicolelis.jpg">
+    	<div class="container-fluid image">
+      	<div class="row col-md-12">
+        	<img class="img-responsive" src="http://3.bp.blogspot.com/-SSq2yQn5xLE/TYqRsNwudMI/AAAAAAAAFtc/cYa895Ud6r4/s1600/miguel%2Bnicolelis.jpg" class="img-responsive">
+        </div>
+      </div>
+      <div id="img-caption">Miguel Nicolelis</div>
+    </div>
+    <hr>
+    <div class="container-fluid quote">
+      <h2 id="qt">"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
+      <p id="sign">-<strong>M</strong>iguel <strong>N</strong>icolelis</p>
+    </div>
+
+    <!-- Section for the information text and external links -->
+    <div id="tribute-info">
+      <div class="container-fluid text">
+      	<div class="row col-md-12">
+        	<div class="col-md-4 col-md-offset-1">
+          	<div class="foto">
+            	<img class="logo" src="http://www.falling-walls.com/website/var/tmp/thumb_359__lecture_portrait-49c4461fa3d90cd84852f224a26f15f8.jpeg">
+          	</div>
+        	</div>
+        	<div class="col-md-6 text">
+          	<p>Born march 7, 1961. Brazilian scientist and physician that is best known for his pioneering work in "reading monkey thought".</p>
+            <p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal.</p>
+        	</div>
+      	</div>
+    	</div>
+    </div>
+    <hr>
+    <a id="tribute-link" href="http://en.wikipedia.org/wiki/Miguel_Nicolelis" target="_blank">Wikipedia</a>
+    <div class="container-fluid link">
+      <div class="links">
+        <a href="http://www.nicolelislab.net/"><i class="fa fa-flask" aria-hidden="true"></i></a>
+        <a href="https://en.wikipedia.org/wiki/Miguel_Nicolelis"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/miguelnicolelis"><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/miguel-nicolelis-4b99763b"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      </div>
+
+    </div>
+    <hr>
 	</div>
-		
-	<!-- Section for the image -->
-	<div class="container-fluid image">
-		<div class="row col-md-12">
-			<img class="img-responsive" src="http://3.bp.blogspot.com/-SSq2yQn5xLE/TYqRsNwudMI/AAAAAAAAFtc/cYa895Ud6r4/s1600/miguel%2Bnicolelis.jpg" class="img-responsive">
-		</div>
-	</div>
-	<hr>
-	<div class="container-fluid quote">
-		<h2>"Impossible is just the possible that someone has not put in enough effort to make it come true."</h2>
-		<p id="sign">- Miguel Nicolelis</p>
-	</div>
-	
-	<!-- Section for the information text and external links -->
-	<div class="container-fluid text">
-		<div class="row col-md-12">
-			<div class="col-md-4 col-md-offset-1">
-				<div class="foto">
-					<img class="logo" src="http://www.falling-walls.com/website/var/tmp/thumb_359__lecture_portrait-49c4461fa3d90cd84852f224a26f15f8.jpeg">
-				</div>
-			</div>
-			<div class="col-md-6 text">
-				<p>Born march 7, 1961. Brazilian scientist and physician that is best known for his pioneering work in "reading monkey thought".</p>
-				<p>Co-founder and scientific director of the Edmond and Lily Safra International Institute for Neuroscience of Natal.</p>
-			</div>
-		</div>
-	</div>
-	<hr>
-	<div class="container-fluid link">
-		<div class="links">
-			<a href="http://www.nicolelislab.net/"><i class="fa fa-flask" aria-hidden="true"></i></a>
-			<a href="https://en.wikipedia.org/wiki/Miguel_Nicolelis"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-			<a href="https://twitter.com/miguelnicolelis"><i class="fa fa-wikipedia-w" aria-hidden="true"></i></a>
-			<a href="https://www.linkedin.com/in/miguel-nicolelis-4b99763b"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-		</div>
-		
-	</div>
-	<hr>
-	
 </body>
